completed exercises except 4, 6 and 9

--- a/Exercice5/index.html
+++ b/Exercice5/index.html
@@ -5,6 +5,14 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+    <nav>
+        <ul>
+            <a href="#accueil"><li>Accueil</li></a>
+            <a href="#a-propos"><li>À propos</li></a>
+            <a href="#services"><li>Services</li></a>
+            <a href="#contact"><li>Contact</li></a>
+        </ul>
+    </nav>
 
 <section id="accueil">
     <h1>Accueil</h1>
