--- a/Exercice10/index.html
+++ b/Exercice10/index.html
@@ -7,5 +7,6 @@
 <body>
     <h1>Mon premier Site Web</h1>
     <p>Bienvenue sur mon site web !</p>
+    <script src="./index.js"></script>
 </body>
 </html>
