--- a/Exercice6/index.html
+++ b/Exercice6/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Exercice CSS / SASS</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="../assets/style.css">
 </head>
 
 <body>
